src/objects/FTE_Day_Card__c.object
<CustomObject>
    <description>This object is used to store Monthly Timecard day-wise records with respect to projects.</description>
    <label>FTE Day Card</label>
    <nameField>
        <displayFormat>Day-Card-{0000}</displayFormat>
        <label>FTE Day Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FTE Day Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Available_Hours__c</fullName>
        <description>This field uses to store max available hours to update any day hours value.</description>
        <label>Available Hours</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>FTE Day Cards</relationshipLabel>
        <relationshipName>FTE_Day_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>FTE Day Cards</relationshipLabel>
        <relationshipName>FTE_Day_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hours__c</fullName>
        <description>This field is used to store a day working hours with respect to projects.</description>
        <label>hours</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Card_Total_Hours__c</fullName>
        <label>Work Card Total Hours</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
</CustomObject>